--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -9,5 +9,6 @@
         <textarea class="form-control" rows="3" name="content"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
+    <a href="/articles"><button type="button" class="btn btn-primary">back</button></a>
 </form>
 {{>layouts/footer}}
