17강까지의 내용 220818

--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -18,6 +18,8 @@
     {{/article}}
     </tbody>
 </table>
+<a href="/articles/{{article.id}}/edit"><button type="button" class="btn btn-primary">Edit</button></a>
+<a href="/articles/{{article.id}}/delete"><button type="button" class="btn btn-danger">Delete</button></a>
 <a href="/articles"><button type="button" class="btn btn-primary">index</button></a>
 
 {{>layouts/footer}}
