--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -48,3 +48,10 @@
         </div>
     </div>
 </nav>
+<!--alert msg-->
+{{#msg}} <!--만약 msg 변수가 있다면!-->
+    <div class="alert alert-primary alert-dismissible">
+        {{msg}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{{/msg}}
